--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,6 +1,6 @@
 -*- text -*-
 
-Version 0.6 (2015-03-?) 
+Version 0.6 (2015-04-13) 
 -----------
 
 * CRAN release.  Also includes the changes from Version 0.5.1. 
