--- a/vignettes/flexsurv-examples.Rnw
+++ b/vignettes/flexsurv-examples.Rnw
@@ -167,15 +167,16 @@ summary(fs2, newdata=list(group="Good"), t=1, fn=median.gengamma)
 %\subsection{Custom summary functions with spline models}                   
 
 
-\subsection{Spline models}
+\section{Spline models}
 
-\subsection{Prognostic model for the breast cancer data}
+\subsection{Prognostic model for the German breast cancer data}
 
 The regression model III in \citet{sauerbrei1999building} used to
 create the prognostic group from the breast cancer data (supplied as
 \code{bc} in \pkg{flexsurv} and \code{GBSG2} in \pkg{TH.data}) can be
 reproduced as follows.   Firstly, the required fractional polynomial 
-transformations of the covariates are constructed. \code{progc} is the Cox model used by
+transformations of the covariates are constructed. \code{progc} 
+implements the Cox model used by
 \citet{sauerbrei1999building}, and \code{prog3} is a flexible
 fully-parametric alternative, implemented as a spline with three
 internal knots.  The number of knots was chosen to minimise AIC.   
@@ -189,8 +190,10 @@ GBSG2 <- transform(GBSG2,
                    X5=exp(-0.12*pnodes),
                    X6=(progrec+1)^0.5
                    )
-(progc <- coxph(Surv(time, cens) ~ horTh + X1a + X1b + X4 + X5 + X6, data=GBSG2))
-(prog3 <- flexsurvspline(Surv(time, cens) ~ horTh + X1a + X1b + X4 + X5 + X6, k=3, data=GBSG2))
+(progc <- coxph(Surv(time, cens) ~ horTh + X1a + X1b + X4 + 
+                  X5 + X6, data=GBSG2))
+(prog3 <- flexsurvspline(Surv(time, cens) ~ horTh + X1a + X1b + X4 + 
+                           X5 + X6, k=3, data=GBSG2))
 @
 The prognostic index can then be derived from categorising
 observations in three groups according to the tertiles of the linear predictor in each model. 
