--- a/vignettes/flexsurv.Rnw
+++ b/vignettes/flexsurv.Rnw
@@ -279,8 +279,9 @@ effects $\exp(\bm{\beta})$ are printed in the output as
 
 The same model can be fitted in \pkg{eha}, also by maximum likelihood, as
 <<results='hide',message=FALSE,warning=FALSE>>=
-library("eha")
+if (require("eha")){
 aftreg(Surv(recyrs, censrec) ~ group, data = bc, dist = "weibull")
+}
 @ 
 The results are presented in the same parameterisation as
 \code{flexsurvreg}, except that the shape and scale parameters are
@@ -432,8 +433,7 @@ categorical covariates (Figure \ref{fig:surv}).  The corresponding estimates fro
 model are overlaid.  Fitted values from further models can be added
 with the \code{lines()} method.  
 <<surv,include=FALSE>>=
-library("colorspace")
-cols <- rainbow_hcl(3)
+cols <- c("#E495A5", "#86B875", "#7DB0DD") # from colorspace::rainbow_hcl(3)
 plot(fs1, col = cols[2], lwd.obs = 2, xlab = "Years", ylab = "Recurrence-free survival")
 lines(fs2, col = cols[3], lty = 2)
 lines(fs3, col = cols[3])
@@ -1382,7 +1382,7 @@ in \pkg{mstate} \citep{mstate:cmpb,mstate:jss} provides
 piecewise-constant estimates and covariances for $H_{rs}(t)$.
 For the Cox models for the BOS data,
 <<>>=
-library("mstate")
+require("mstate")
 tmat <- rbind(c(NA, 1, 2), c(NA, NA, 3), c(NA, NA, NA))
 mrcox <- msfit(crcox, trans = tmat)
 mfcox <- msfit(cfcox, trans = tmat)
@@ -1420,7 +1420,7 @@ clock-reset model has an improved AIC of \Sexpr{round(crwei$AIC)}, compared to
 the clock-forward and clock-reset models give slightly
 different hazard trajectories.
 <<cumhaz,include=FALSE>>=
-cols <- c("black", rainbow_hcl(3))
+cols <- c("black", "#E495A5", "#86B875", "#7DB0DD") # colorspace::rainbow_hcl(3)
 plot(mrcox, xlab = "Years after baseline", lwd = 3, xlim = c(0, 14), cols = cols[1:3])
 for (i in 1:3){
     lines(tgrid, mrexp$Haz$Haz[mrexp$Haz$trans == i], col = cols[i], lty = 2, lwd = 2)
@@ -1554,7 +1554,6 @@ mssample(mrcox$Haz, trans = tmat, clock = "reset", M = 1000,
 mssample(mrwei$Haz, trans = tmat, clock = "reset", M = 1000, 
          tvec = c(5, 10))
 @ 
-
 
 \section{Potential extensions}
 \label{sec:extensions}
