Calculate likelihood separately for deaths / censorings, improving efficiency and removing some warnings with interval censoring.

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,9 @@
 -*- text -*-
 
+* Slightly more efficient likelihood calculations, and removed
+  spurious warning from liklihood with interval censoring.
+
+
 Version 0.7 (2015-11-13)
 -----------
 
