--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,12 @@
 -*- text -*-
 
+Version 1.0.0 (2016-05-10)
+-------------
+
+* Version number bumped to 1.0.0 to accompany the publication of the
+  vignette in Journal of Statistical Software.
+
+
 Version 0.7.1 (2016-03-24)
 -------------
 
