--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -1,3 +1,14 @@
+@article{flexsurv,
+  title        = "{flexsurv}: A Platform for Parametric Survival Modeling in {R}",
+  author       = "Jackson, C.",
+  journal      = "Journal of Statistical Software",
+  year         = "2016",
+  volume       = "70",
+  number       = "8",
+  pages        = "1--33",
+  doi          = "10.18637/jss.v070.i08",
+}
+                  
 @Manual{R,
   title = {\proglang{R}: A Language and Environment for Statistical Computing},
   author = {{\proglang{R} Core Team}},
