Bug fix for tidy summary with covariates but no newdata

--- a/TODO
+++ b/TODO
@@ -10,6 +10,8 @@ Ongoing problems with Hessian in Weibull models (see p metcalfe example)
 
 compare with rstpm2 package
 
+predictions
+
 
 SURVREG
 
