--- a/inst/NEWS
+++ b/inst/NEWS
@@ -13,7 +13,7 @@ Version 1.1 (2017-??-??)
 * Documentation migrated to roxygen.  Thanks to Paul Metcalfe for the
   contribution.
 
-* Restricted mean and mean included as built-in functions in
+* Mean, median and restricted mean included as built-in functions in
   summary.flexsurvreg. Thanks to Jordan Amdahl for the contribution.
 
 
