--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,20 +1,23 @@
 -*- text -*-
 
 
-Version 1.1 (2017-??-??)
+Version 1.1 (2017-03-27)
 -------------
 
 * Substantial speed improvements in fitting most of the built-in
   models, from implementing their PDFs and CDFs in C++.  Thanks to
-  Paul Metcalfe for contributing this.
+  Paul Metcalfe for contributing this.  Results may therefore differ
+  from previous versions in edge cases. 
 
 * As a result the package now depends on Rcpp.
+
+* Mean, median and restricted mean included as built-in functions in
+  summary.flexsurvreg. Thanks to Jordan Amdahl for the contribution.
 
 * Documentation migrated to roxygen.  Thanks to Paul Metcalfe for the
   contribution.
 
-* Mean, median and restricted mean included as built-in functions in
-  summary.flexsurvreg. Thanks to Jordan Amdahl for the contribution.
+* Various minor bug fixes, see github commits.
 
 
 Version 1.0.2 (2016-09-26)
