Bug fix for qllogis with lower.tail=FALSE

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Handle left truncation and interval censoring at the same time? 
+
 is logliki component of flexsurvreg objects the same as deviance residuals given by survreg?
 
 Ongoing problems with Hessian in Weibull models (see p metcalfe example)
